--- a/src/compontents/ActuarialModelCalculation.css
+++ b/src/compontents/ActuarialModelCalculation.css
@@ -51,3 +51,22 @@
 .ResultTable-container .even td {
   background-color: #DEDEDE;
 }
+
+.Errors-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 1vh;
+  border-style: ridge;
+  padding: 5px;
+  border-color: red;
+  background-color: #FFC2C2;
+}
+
+.Errors-container p {
+  margin-block: 0px;
+}
+
+.Errors-container .error {
+  margin-inline-start: 20px;
+}
