--- a/src/compontents/ActuarialModelCalculation.css
+++ b/src/compontents/ActuarialModelCalculation.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .InputForm-container input, select {
@@ -56,7 +56,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 1vh;
+  margin: 1vh 0px;
   border-style: ridge;
   padding: 5px;
   border-color: red;
