--- a/src/compontents/Header.css
+++ b/src/compontents/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  justify-content: start;
+  justify-content: flex-start;
   font-size: calc(20px + 2vmin);
   padding: 1vh 10vw;
   border-bottom: solid;
